# letter_boxed_solver

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  letter_boxed_solver.sln
enc_temp_folder/4dfdfe118f85ca2e6ce0f68f9dbbe6dc/: CthLetterBoxedSolver.cpp
gTest/: gTest.vcxproj  gTest.vcxproj.filters  test.cpp
lbs_solver/: CMakeLists.txt
lbs_solver/incl/solver/: algorithm.hpp  index.hpp  settings.hpp  solver.hpp  util.hpp
lbs_solver/runner/: CMakeLists.txt
lbs_solver/runner/assets/: words_easy.txt
lbs_solver/runner/src/: gpt_runner.hpp  main.cpp
lbs_solver/tests/: CMakeLists.txt
lbs_solver/tests/assets/: lexicon_words.csv  to_lowercase.py
lbs_solver/tests/src/: algorithm_test.cpp  index_test.cpp  solver_test.cpp
letter_boxed_solver/: CthGlobalVariables.hpp  CthLetterBoxedSolver.cpp  CthLetterBoxedSolver.hpp  CthUtils.hpp  letter_boxed_solver.cpp  letter_boxed_solver.vcxproj  letter_boxed_solver.vcxproj.filters  main.cpp  wordlist.10000.txt  words_hard.txt
letter_boxed_solver/resources/: words_easy.cth  words_easy.txt
test/: pch.h  test.cpp  test.vcxproj
unit_test/: unit_test.cpp  unit_test.vcxproj
